--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@fontsource/inter": "^5.2.6",
     "axios": "^1.11.0",
     "element-plus": "^2.10.5",
+    "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
