--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "license": "AGPL v3.0",
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
   },
