--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,7 +10,7 @@
         "laravel/sanctum": "^4.0"
     },
     "require-dev": {
-        "kitloong/laravel-migrations-generator": "^7.1",
+        "fakerphp/faker": "^1.24",
         "laravel/pint": "^1.13"
     },
     "autoload": {
