--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,8 +10,7 @@
         "laravel/sanctum": "^4.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.24",
-        "laravel/pint": "^1.13"
+        "fakerphp/faker": "^1.24"
     },
     "autoload": {
         "psr-4": {
